Fix router and controller separation
